--- a/artstudyweb/survey/templates/survey/thank_you.html
+++ b/artstudyweb/survey/templates/survey/thank_you.html
@@ -3,6 +3,6 @@
 {% block body %}
     <div class="jumbotron">
     <h1>Thank you!</h1>
-    <p>This study is being done in collaboration with <a href="">Fine Acts</a>. You can find the code powering this platform, the study finds and statistical analysis in our <a href="">github repo</a>.</p>
+    <p>This study is being done in collaboration with <a href="http://fineacts.co">Fine Acts</a>. You can find the code powering this platform, the study finds and statistical analysis in our <a href="https://github.com/ruiaf/artstudy/">github repo</a>.</p>
     </div>
 {% endblock %}
